--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
     "firebase-admin": "^13.4.0",
     "http-errors": "~1.6.3",
+    "mongoose": "^8.15.1",
     "mongoose-fuzzy-searching": "^2.0.2",
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11"
