--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "fsingleswebapp",
-  "version": "0.0.0",
-  "private": true,
+  "name": "flirting-singles25",
+  "version": "1.0.0",
+  "main": "script.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "@paypal/checkout-server-sdk": "^1.0.3",
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "firebase-admin": "^13.4.0",
-    "http-errors": "~1.6.3",
-    "mongoose": "^8.15.1",
-    "mongoose-fuzzy-searching": "^2.0.2",
-    "morgan": "~1.9.1",
-    "pug": "3.0.3"
+    "dotenv": "^16.6.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.16.1"
   }
 }
