--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "fsingleswebapp",
-  "version": "0.0.0",
-  "private": true,
+  "name": "flirting-singles",
+  "version": "1.0.0",
+  "private": "true",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node server/app.js",
+    "client": "cd client && npm start",
+    "server": "cd server && nodemon app.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "dependencies": {
-    "cookie-parser": "~1.4.4",
+  "dependency": {
+    "express": "4.18.2",
+    "mongoose": "7.0.3",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "firebase-admin": "^13.4.0",
-    "http-errors": "~1.6.3",
-    "mongoose": "^8.15.1",
-    "mongoose-fuzzy-searching": "^2.0.2",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "dotenv": "^16.3.1",
+    "socket.io": "^4.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "2.0.22",
+    "concurrently": "^8.2.0"
   }
 }
