--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,16 +3,16 @@
   "configurations": [
     {
       "name": "localhost (Edge)",
-      "type": "edge",
+      "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000",
+      "url": "https://www.flirtingsingles.blog",
       "webRoot": "${workspaceFolder}\\public"
     },
     {
       "name": "localhost (Chrome)",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:3000",
+      "url": "https://www.flirtingsingles.blog",
       "webRoot": "${workspaceFolder}\\public"
     },
     {
@@ -20,7 +20,7 @@
       "type": "node",
       "request": "launch",
       "cwd": "${workspaceFolder}/bin",
-      "program": "${workspaceFolder}/bin/www",
+      "program": "${workspaceFolder}/bin/www.flirtingsingles.blog",
       "stopOnEntry": true
     }
   ],
