--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.0",
-    "nodemon": "2.0.22"
+    "nodemon": "^3.1.10"
   },
   "dependencies": {
     "firebase": "^11.10.0"
