--- a/fsingles-codebase/package.json
+++ b/fsingles-codebase/package.json
@@ -7,25 +7,20 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log",
-    "genkit:start": "genkit start -- tsx --watch src/genkit-sample.ts"
+    "logs": "firebase functions:log"
   },
   "engines": {
     "node": "22"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
-    "express": "^5.1.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "genkit": "^1.14.1"
+    "firebase-functions": "^6.0.1"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0",
-    "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "firebase-functions-test": "^3.1.0"
   },
   "private": true
 }
