--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "nodemon": "^3.1.10"
   },
   "keywords": [],
-  "author": "",
+  "author": "Amy Standridge",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -31,8 +31,6 @@
     "firebase-admin": "^13.4.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.15.1",
-    "mongoose-fuzzy-searching": "^2.0.2",
-    "morgan": "~1.9.1",
-    "pug": "2.0.0-beta11"
+    "morgan": "~1.9.1"
   }
 }
